--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
 aniso8601==7.0.0
+dj-database-url==0.5.0
 Django==2.2.4
+django-heroku==0.3.1
 entrypoints==0.3
 flake8==3.7.8
 graphene==2.1.8
 graphene-django==2.5.0
 graphql-core==2.2.1
 graphql-relay==2.0.0
+gunicorn==19.9.0
 mccabe==0.6.1
 promise==2.2.1
+psycopg2==2.8.3
 psycopg2-binary==2.8.3
 pycodestyle==2.5.0
 pyflakes==2.1.1
@@ -16,3 +20,4 @@ Rx==1.6.1
 singledispatch==3.4.0.3
 six==1.12.0
 sqlparse==0.3.0
+whitenoise==4.1.3
