--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ psycopg2==2.8.3
 psycopg2-binary==2.8.3
 pycodestyle==2.5.0
 pyflakes==2.1.1
+python-dotenv==0.10.3
 pytz==2019.2
 Rx==1.6.1
 singledispatch==3.4.0.3
